# RAG-Betterdb

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  step-by-step.md
rag/: config.py  main.py  pipeline.py
